editor-components/footer/footer5/footer5.module.scss
@use "../../../../composer-tools//composer-base-components//base//utitilities/viewports.module.scss" as *;

.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: var(--composer-gap-md);
  background-color: var(--composer-html-background);

  &.absolute {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background: transparent;

    .first-container {
      background: transparent;
    }

    .second-container {
      background: transparent;
    }
  }

  .first-container {
    padding: var(--composer-gap-md) var(--composer-gap-xl) !important;
    .first-max-content {
      .header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        gap: var(--composer-gap-md);

        .left {
          .title,.subtitle{
            content: "";
          }
          &.left-full {
            width: 100%;
          }
        }

        .right {
          min-width: 20%;
          display: flex;
          justify-content: end;

          .button{
            .button-text{
              content: "";
            }
          }
        }

        &.center {
          flex-direction: column;
          align-items: center;

          .right {
            justify-content: center;
            .button{
              display: flex;
              justify-content: center;
            }
          }
        }
      }
    }
  }

  .line {
    border-top: 1px solid rgb(var(--composer-font-color-primary-rgb), 0.5);
  }

  .second-container {
    padding: var(--composer-gap-md) var(--composer-gap-xl) !important;
    .second-max-content {
      .bottom {
        display: flex;
        justify-content: space-between;
        width: 100%;

        .links,
        .footer-text {
          flex: 1;
          display: flex;
          align-items: center;
          color: var(--composer-font-color-primary);
        }

        .links {
          display: flex;
          flex-wrap: wrap;
          gap: var(--composer-gap-md);
        }

        .footer-text {
          justify-content: flex-end;
        }

        .links {
          .link-element {
            .link-text {
              transition: all 0.3s ease;
              
              &[data-animation~="animate1"]:hover {
                color: var(--composer-primary-color);
              }

              &[data-animation~="animate2"]:hover {
                transform: translateY(-3px);
                color: var(--composer-primary-color);
              }

              &[data-animation~="animate3"]:hover {
                transform: scale(1.1);
                color: var(--composer-primary-color);
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    gap: var(--composer-gap-sm);
    .first-container {
      padding: var(--composer-gap-xl) var(--composer-gap-lg) var(--composer-gap-md) var(--composer-gap-lg) !important;

      .first-max-content {
        .header {
          align-items: baseline;
          &.center {
            display: flex;
            flex-direction: column;
            gap: 0;
          }
        }
      }
    }

    .line {
      border-top: 1px solid rgb(var(--composer-font-color-primary-rgb), 0.5);
    }

    .second-container {
      padding: var(--composer-gap-sm) var(--composer-gap-lg) !important;
      .second-max-content {
        .bottom {
          display: flex;
          flex-direction: column;
          justify-content: space-between;
          width: 100%;
          gap: var(--composer-gap-sm);

          &.center {
            .links,
            .footer-text {
              justify-content: center !important;
            }
          }

          .links,
          .footer-text {
            flex: 1;
            display: flex;
            align-items: center;
          }

          .links {
            gap: var(--composer-gap-md);
            width: 100%;
            justify-content: center !important;

            .link-element {
              .link-text {
                color: var(--composer-font-color-primary);
                transition: color 0.3s ease;
              }

              &.has-path .link-text {
                color: var(--composer-primary-color);
              }
            }

          }

          .footer-text {
            color: var(--composer-font-color-primary);
            justify-content: center !important;

          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .first-container {
      .first-max-content {
        .header {
          flex-direction: column;
          gap: var(--composer-gap-sm);
          align-items: center;
          .left {
            width: 100%;
          }
        }
      }
    }

    .second-container {
      padding: var(--composer-gap-md) !important;
      .second-max-content {
        .bottom {
          align-items: center;
          /* When bottom is center-aligned on phone, center any list-groups and their content */
          &.center {
            .list-group,
            .links .list-group {
              align-items: center;

              .title,
              .text {
                text-align: center;
              }
            }
          }
          .links {
            .link-element{
              .link-text{
                text-align: center;
              }
            }

            &.center {
              justify-content: center;
            }
          }
          .footer-text{
            text-align: center;
          }

        }
      }
    }

    .line {
      border-top: 1px solid rgb(var(--composer-font-color-primary-rgb), 0.5);
    }
  }
}

