fix: phone alignment

--- a/editor-components/footer/footer5/footer5.module.scss
+++ b/editor-components/footer/footer5/footer5.module.scss
@@ -208,7 +208,6 @@
         .header {
           flex-direction: column;
           gap: var(--composer-gap-sm);
-          align-items: center;
           .left {
             width: 100%;
           }
